--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aladdin Departamentos</title>
-    <link rel="stylesheet" href="aladdin.css" />
-  </head>
-  <body>
-    <!--barra de navegacion-->
-    <div class="nav">
-      <a href=""><img src="./logoNegro (1).png    " alt="logo" /></a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Aladdin Departamentos</title>
+  <link rel="stylesheet" href="aladdin.css" />
+</head>
+
+<body>
+  <!--barra de navegacion-->
+  <nav>
+    <label for="" class="logo">
+      <a href=""> <img src="./img/logoNegro.png" alt=""></a>
+    <div class="barra">
       <ul>
         <li>Home</li>
         <li>Galery</li>
         <li>Contact</li>
       </ul>
     </div>
-  </body>
+
+  </label>
+  </nav>
+  <!-- fin de barra de navegacion -->
+</body>
+
 </html>
