--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="author" content="NahuelZwonko">
 	<link rel="icon" href="#">
 	<title>Aladdin Departamentos</title>
 	<!-- Bootstrap CSS -->
@@ -21,7 +21,7 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-default">
 		<div class="container">
-			<!-- Brand and toggle get grouped for better mobile display -->
+			<!-- Marca y alternar se agrupan para una mejor visualización móvil -->
 			<div class="navbar-header page-scroll">
 				<button type="button" class="navbar-toggle" data-toggle="collapse"
 					data-target="#bs-example-navbar-collapse-1">
@@ -32,9 +32,6 @@
 			<!-- barra de navegacion -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
-					<li class="hidden">
-						<a href="#page-top"></a>
-					</li>
 					<li>
 						<a class="page-scroll" href="#about">About</a>
 					</li>
