--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<button type="button" class="navbar-toggle" data-toggle="collapse"
 					data-target="#bs-example-navbar-collapse-1">
 				</button>
-				<a class="navbar-brand page-scroll" href="#page-top"><img class="logoA" src="./images/logo/negro.png"
+				<a class="navbar-brand page-scroll" href="#page-top"><img class="logoA" src="./images/logo/blanco.png"
 						alt="Aladdin departamentos"></a>
 			</div>
 			<!-- barra de navegacion -->
@@ -47,40 +47,44 @@
 		</div>
 		<!-- /.container-fluid -->
 	</nav>
-<!-- Portafolio -->
-<!-- 	<section id="portfolio">
+	<!-- Portafolio/ galeria -->
+	<section id="portfolio">
 		<div class="container">
+			<!-- title -->
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<div class="section-title">
-						<h2>Aladdin Departamentos</h2>
+						<h2 class="text-blur-ou">Aladdin Departamentos</h2>
 						<p>Our portfolio is the best way to show our work, you can see here a big range of our work.
 							Check them all and you will find what you are looking for.</p>
 					</div>
 				</div>
 			</div>
+			<!-- fin de title -->
+			<!-- Inicio de galeria -->
+			<!-- grupo 1 -->
 			<div class="row row-0-gutter">
-				
+				<!-- img 1 -->
 				<div class="col-md-6 col-0-gutter">
 					<div class="ot-portfolio-item">
 						<figure class="effect-bubba">
 							<img src="images/demo/portfolio-1.jpg" alt="img02" class="img-responsive" />
 							<figcaption>
-								<h2>Dean & Letter</h2>
-								<p>Branding, Design</p>
+								<h2>IMG 1</h2>
+								<p>Description</p>
 								<a href="#" data-toggle="modal" data-target="#Modal-1">View more</a>
 							</figcaption>
 						</figure>
 					</div>
 				</div>
-
+				<!-- img 2 -->
 				<div class="col-md-6 col-0-gutter">
 					<div class="ot-portfolio-item">
 						<figure class="effect-bubba">
 							<img src="images/demo/portfolio-2.jpg" alt="img02" class="img-responsive" />
 							<figcaption>
-								<h2>Startup Framework</h2>
-								<p>Branding, Web Design</p>
+								<h2>IMG 2</h2>
+								<p>Description</p>
 								<a href="#" data-toggle="modal" data-target="#Modal-2">View more</a>
 							</figcaption>
 						</figure>
@@ -88,57 +92,59 @@
 				</div>
 
 			</div>
+			<!-- grupo 2 -->
 			<div class="row row-0-gutter">
-				
+				<!-- img 3 -->
 				<div class="col-md-6 col-0-gutter">
 					<div class="ot-portfolio-item">
 						<figure class="effect-bubba">
 							<img src="images/demo/portfolio-3.jpg" alt="img02" class="img-responsive" />
 							<figcaption>
-								<h2>Lamp & Velvet</h2>
-								<p>Branding, Web Design</p>
+								<h2>IMG 3</h2>
+								<p>Description</p>
 								<a href="#" data-toggle="modal" data-target="#Modal-3">View more</a>
 							</figcaption>
 						</figure>
 					</div>
 				</div>
-
+				<!-- img 4 -->
 				<div class="col-md-6 col-0-gutter">
 					<div class="ot-portfolio-item">
 						<figure class="effect-bubba">
 							<img src="images/demo/portfolio-4.jpg" alt="img02" class="img-responsive" />
 							<figcaption>
-								<h2>Smart Name</h2>
-								<p>Branding, Design</p>
+								<h2>IMG 4</h2>
+								<p>Description</p>
 								<a href="#" data-toggle="modal" data-target="#Modal-4">View more</a>
 							</figcaption>
 						</figure>
 					</div>
 				</div>
-	
-			</div>
-			<div class="row row-0-gutter">
 
+			</div>
+			<!-- grupo 3 -->
+			<div class="row row-0-gutter">
+				<!-- img 5 -->
 				<div class="col-md-6 col-0-gutter">
 					<div class="ot-portfolio-item">
 						<figure class="effect-bubba">
 							<img src="images/demo/portfolio-5.jpg" alt="img02" class="img-responsive" />
 							<figcaption>
-								<h2>Fast People</h2>
-								<p>Branding, Web Design</p>
+								<h2>IMG 5</h2>
+								<p>Description</p>
 								<a href="#" data-toggle="modal" data-target="#Modal-5">View more</a>
 							</figcaption>
 						</figure>
 					</div>
 				</div>
-
+				<!-- img 6 -->
 				<div class="col-md-6 col-0-gutter">
 					<div class="ot-portfolio-item">
 						<figure class="effect-bubba">
 							<img src="images/demo/portfolio-6.jpg" alt="img02" class="img-responsive" />
 							<figcaption>
-								<h2>Kites & Stars</h2>
-								<p>Branding, Web Design</p>
+								<h2>IMG 6</h2>
+								<p>Description</p>
 								<a href="#" data-toggle="modal" data-target="#Modal-2">View more</a>
 							</figcaption>
 						</figure>
@@ -147,9 +153,9 @@
 
 			</div>
 		</div>
-	</section> -->
-<!-- About -->
-<!-- 	<section id="about" class="mz-module">
+	</section>
+	<!-- About -->
+	<!-- 	<section id="about" class="mz-module">
 		<div class="container light-bg">
 			<div class="row">
 				<div class="col-lg-12 text-center">
@@ -162,8 +168,8 @@
 		</div>
 		
 	</section> -->
-<!-- Team -->
-<!-- 	<section id="team">
+	<!-- Team -->
+	<!-- 	<section id="team">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
@@ -217,8 +223,8 @@
 			</div>
 		</div>
 	</section> -->
-<!-- Contact -->
-<!-- 	<section id="contact">
+	<!-- Contact -->
+	<!-- 	<section id="contact">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
@@ -269,18 +275,18 @@
 			</div>
 		</div>
 	</section> -->
-<!-- 	<p id="back-top">
+	<!-- 	<p id="back-top">
 		<a href="#top"><i class="fa fa-angle-up"></i></a>
 	</p> -->
 	<!-- Footer -->
-<!-- 	<footer>
+	<!-- 	<footer>
 		<div class="container text-center">
 			<p>Designed by <a href="http://codehuit.com"><span>CODE</span>HUIT.com</a></p>
 		</div>
 	</footer> -->
 
 	<!-- Modal for portfolio item 1 -->
-<!-- 	<div class="modal fade" id="Modal-1" tabindex="-1" role="dialog" aria-labelledby="Modal-label-1">
+	<!-- 	<div class="modal fade" id="Modal-1" tabindex="-1" role="dialog" aria-labelledby="Modal-label-1">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -301,7 +307,7 @@
 	</div> -->
 
 	<!-- Modal for portfolio item 2 -->
-<!-- 	<div class="modal fade" id="Modal-2" tabindex="-1" role="dialog" aria-labelledby="Modal-label-2">
+	<!-- 	<div class="modal fade" id="Modal-2" tabindex="-1" role="dialog" aria-labelledby="Modal-label-2">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -322,7 +328,7 @@
 	</div>
  -->
 	<!-- Modal for portfolio item 3 -->
-<!-- 	<div class="modal fade" id="Modal-3" tabindex="-1" role="dialog" aria-labelledby="Modal-label-3">
+	<!-- 	<div class="modal fade" id="Modal-3" tabindex="-1" role="dialog" aria-labelledby="Modal-label-3">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -343,7 +349,7 @@
 	</div> -->
 
 	<!-- Modal for portfolio item 4 -->
-<!-- 	<div class="modal fade" id="Modal-4" tabindex="-1" role="dialog" aria-labelledby="Modal-label-4">
+	<!-- 	<div class="modal fade" id="Modal-4" tabindex="-1" role="dialog" aria-labelledby="Modal-label-4">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -364,7 +370,7 @@
 	</div> -->
 
 	<!-- Modal for portfolio item 5 -->
-<!-- 	<div class="modal fade" id="Modal-5" tabindex="-1" role="dialog" aria-labelledby="Modal-label-5">
+	<!-- 	<div class="modal fade" id="Modal-5" tabindex="-1" role="dialog" aria-labelledby="Modal-label-5">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
