--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
 		</div>
 	</section>
 	<!-- About -->
-	<!-- 	<section id="about" class="mz-module">
-		<div class="container light-bg">
+	<section id="about" class="mz-module">
+		<div class="container ">
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<div class="section-title">
@@ -166,65 +166,11 @@
 			</div>
 
 		</div>
-		
-	</section> -->
-	<!-- Team -->
-	<!-- 	<section id="team">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<div class="section-title">
-						<h2>Our Team</h2>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				
-				<div class="col-md-4">
-					<div class="team-item">
-						<div class="team-image">
-							<img src="images/demo/author-2.jpg" class="img-responsive" alt="author">
-						</div>
-						<div class="team-text">
-							<h3>TOM BEKERS</h3>
-							<div class="team-position">CEO & Web Design</div>
-							<p>Mida sit una namet, cons uectetur adipiscing adon elit. Aliquam vitae barasa droma.</p>
-						</div>
-					</div>
-				</div>
 
-				<div class="col-md-4">
-					<div class="team-item">
-						<div class="team-image">
-							<img src="images/demo/author-6.jpg" class="img-responsive" alt="author">
-						</div>
-						<div class="team-text">
-							<h3>LINA GOSATA</h3>
-							<div class="team-position">Photography</div>
-							<p>Worsa dona namet, cons uectetur dipiscing adon elit. Aliquam vitae fringilla unda mir.
-							</p>
-						</div>
-					</div>
-				</div>
+	</section>
 
-				<div class="col-md-4">
-					<div class="team-item">
-						<div class="team-image">
-							<img src="images/demo/author-4.jpg" class="img-responsive" alt="author">
-						</div>
-						<div class="team-text">
-							<h3>John BEKERS</h3>
-							<div class="team-position">Marketing</div>
-							<p>Dolor sit don namet, cons uectetur beriscing adon elit. Aliquam vitae fringilla unda.</p>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</section> -->
 	<!-- Contact -->
-	<!-- 	<section id="contact">
+	<section id="contact">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
@@ -274,16 +220,16 @@
 				</div>
 			</div>
 		</div>
-	</section> -->
+	</section>
 	<!-- 	<p id="back-top">
 		<a href="#top"><i class="fa fa-angle-up"></i></a>
 	</p> -->
 	<!-- Footer -->
-	<!-- 	<footer>
+		<footer>
 		<div class="container text-center">
-			<p>Designed by <a href="http://codehuit.com"><span>CODE</span>HUIT.com</a></p>
+			<p>Desarrollado por <a href="http://codehuit.com"><span>CODE</span>HUIT.com</a></p>
 		</div>
-	</footer> -->
+	</footer> 
 
 	<!-- Modal for portfolio item 1 -->
 	<!-- 	<div class="modal fade" id="Modal-1" tabindex="-1" role="dialog" aria-labelledby="Modal-label-1">
