--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 	</footer> 
 
 	<!-- Modal for portfolio item 1 -->
-	<!-- 	<div class="modal fade" id="Modal-1" tabindex="-1" role="dialog" aria-labelledby="Modal-label-1">
+		<div class="modal fade" id="Modal-1" tabindex="-1" role="dialog" aria-labelledby="Modal-label-1">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -250,7 +250,7 @@
 				</div>
 			</div>
 		</div>
-	</div> -->
+	</div> -
 
 	<!-- Modal for portfolio item 2 -->
 	<!-- 	<div class="modal fade" id="Modal-2" tabindex="-1" role="dialog" aria-labelledby="Modal-label-2">
