--- a/index.html
+++ b/index.html
@@ -2,345 +2,29 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<meta name="description" content="">
-	<meta name="author" content="NahuelZwonko">
-	<link rel="icon" href="#">
-	<title>Aladdin Departamentos</title>
-	<!-- Bootstrap CSS -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<!-- Custom styles for this template -->
-	<link href="css/style.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Aladdin Departamentos</title>
+  <link rel="stylesheet" href="aladdin.css" />
 </head>
+a
+<body>
+  <!--barra de navegacion-->
+  <nav>
+    <label for="" class="logo">
+      <a href=""> <img src="./img/logoNegro.png" alt=""></a>
+    <div class="barra">
+      <ul>
+        <li>Home</li>
+        <li>Galery</li>
+        <li>Contact</li>
+      </ul>
+    </div>
 
-<body id="page-top">
-	<!-- Navigation -->
-	<nav class="navbar navbar-default">
-		<div class="container">
-			<!-- Marca y alternar se agrupan para una mejor visualización móvil -->
-			<div class="navbar-header page-scroll">
-				<button type="button" class="navbar-toggle" data-toggle="collapse"
-					data-target="#bs-example-navbar-collapse-1">
-				</button>
-				<a class="navbar-brand page-scroll" href="#page-top"><img class="logoA" src="./images/logo/blanco.png"
-						alt="Aladdin departamentos"></a>
-			</div>
-			<!-- barra de navegacion -->
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav navbar-right">
-					<li>
-						<a class="page-scroll" href="#about">About</a>
-					</li>
-					<li>
-						<a class="page-scroll" href="#portfolio">Portfolio</a>
-					</li>
-					<li>
-						<a class="page-scroll" href="#contact">Contact</a>
-					</li>
-				</ul>
-			</div>
-			<!-- /fin de barra de navegacion -->
-		</div>
-		<!-- /.container-fluid -->
-	</nav>
-	<!-- Portafolio/ galeria -->
-	<section id="portfolio">
-		<div class="container">
-			<!-- title -->
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<div class="section-title">
-						<h2 class="text-blur-ou">Aladdin Departamentos</h2>
-						<p>Our portfolio is the best way to show our work, you can see here a big range of our work.
-							Check them all and you will find what you are looking for.</p>
-					</div>
-				</div>
-			</div>
-			<!-- fin de title -->
-			<!-- Inicio de galeria -->
-			<!-- grupo 1 -->
-			<div class="row row-0-gutter">
-				<!-- img 1 -->
-				<div class="col-md-6 col-0-gutter">
-					<div class="ot-portfolio-item">
-						<figure class="effect-bubba">
-							<img src="images/demo/portfolio-1.jpg" alt="img02" class="img-responsive" />
-							<figcaption>
-								<h2>IMG 1</h2>
-								<p>Description</p>
-								<a href="#" data-toggle="modal" data-target="#Modal-1">View more</a>
-							</figcaption>
-						</figure>
-					</div>
-				</div>
-				<!-- img 2 -->
-				<div class="col-md-6 col-0-gutter">
-					<div class="ot-portfolio-item">
-						<figure class="effect-bubba">
-							<img src="images/demo/portfolio-2.jpg" alt="img02" class="img-responsive" />
-							<figcaption>
-								<h2>IMG 2</h2>
-								<p>Description</p>
-								<a href="#" data-toggle="modal" data-target="#Modal-2">View more</a>
-							</figcaption>
-						</figure>
-					</div>
-				</div>
-
-			</div>
-			<!-- grupo 2 -->
-			<div class="row row-0-gutter">
-				<!-- img 3 -->
-				<div class="col-md-6 col-0-gutter">
-					<div class="ot-portfolio-item">
-						<figure class="effect-bubba">
-							<img src="images/demo/portfolio-3.jpg" alt="img02" class="img-responsive" />
-							<figcaption>
-								<h2>IMG 3</h2>
-								<p>Description</p>
-								<a href="#" data-toggle="modal" data-target="#Modal-3">View more</a>
-							</figcaption>
-						</figure>
-					</div>
-				</div>
-				<!-- img 4 -->
-				<div class="col-md-6 col-0-gutter">
-					<div class="ot-portfolio-item">
-						<figure class="effect-bubba">
-							<img src="images/demo/portfolio-4.jpg" alt="img02" class="img-responsive" />
-							<figcaption>
-								<h2>IMG 4</h2>
-								<p>Description</p>
-								<a href="#" data-toggle="modal" data-target="#Modal-4">View more</a>
-							</figcaption>
-						</figure>
-					</div>
-				</div>
-
-			</div>
-			<!-- grupo 3 -->
-			<div class="row row-0-gutter">
-				<!-- img 5 -->
-				<div class="col-md-6 col-0-gutter">
-					<div class="ot-portfolio-item">
-						<figure class="effect-bubba">
-							<img src="images/demo/portfolio-5.jpg" alt="img02" class="img-responsive" />
-							<figcaption>
-								<h2>IMG 5</h2>
-								<p>Description</p>
-								<a href="#" data-toggle="modal" data-target="#Modal-5">View more</a>
-							</figcaption>
-						</figure>
-					</div>
-				</div>
-				<!-- img 6 -->
-				<div class="col-md-6 col-0-gutter">
-					<div class="ot-portfolio-item">
-						<figure class="effect-bubba">
-							<img src="images/demo/portfolio-6.jpg" alt="img02" class="img-responsive" />
-							<figcaption>
-								<h2>IMG 6</h2>
-								<p>Description</p>
-								<a href="#" data-toggle="modal" data-target="#Modal-2">View more</a>
-							</figcaption>
-						</figure>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</section>
-	<!-- About -->
-	<section id="about" class="mz-module">
-		<div class="container ">
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<div class="section-title">
-						<h2>ABOUT</h2>
-					</div>
-				</div>
-			</div>
-
-		</div>
-
-	</section>
-
-	<!-- Contact -->
-	<section id="contact">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<div class="section-title">
-						<h2>Contact Us</h2>
-						<p>If you have some Questions or need Help! Please Contact Us!<br>We make Cool and Clean Design
-							for your Business</p>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<form name="sentMessage" id="contactForm" novalidate="">
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Your Name *" id="name"
-										required="" data-validation-required-message="Please enter your name.">
-									<p class="help-block text-danger"></p>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-									<input type="email" class="form-control" placeholder="Your Email *" id="email"
-										required="" data-validation-required-message="Please enter your email address.">
-									<p class="help-block text-danger"></p>
-								</div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-12">
-								<div class="form-group">
-									<textarea class="form-control" placeholder="Your Message *" id="message" required=""
-										data-validation-required-message="Please enter a message."></textarea>
-									<p class="help-block text-danger"></p>
-								</div>
-							</div>
-							<div class="clearfix"></div>
-						</div>
-						<div class="row">
-							<div class="col-lg-12 text-center">
-								<div id="success"></div>
-								<button type="submit" class="btn">Send Message</button>
-							</div>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- 	<p id="back-top">
-		<a href="#top"><i class="fa fa-angle-up"></i></a>
-	</p> -->
-	<!-- Footer -->
-		<footer>
-		<div class="container text-center">
-			<p>Desarrollado por <a href="http://codehuit.com"><span>CODE</span>HUIT.com</a></p>
-		</div>
-	</footer> 
-
-	<!-- Modal for portfolio item 1 -->
-		<div class="modal fade" id="Modal-1" tabindex="-1" role="dialog" aria-labelledby="Modal-label-1">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-							aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="Modal-label-1">Dean & Letter</h4>
-				</div>
-				<div class="modal-body">
-					<img src="images/demo/portfolio-1.jpg" alt="img01" class="img-responsive" />
-					<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
-					<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-				</div>
-			</div>
-		</div>
-	</div> -
-
-	<!-- Modal for portfolio item 2 -->
-	<!-- 	<div class="modal fade" id="Modal-2" tabindex="-1" role="dialog" aria-labelledby="Modal-label-2">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-							aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="Modal-label-2">Startup Framework</h4>
-				</div>
-				<div class="modal-body">
-					<img src="images/demo/portfolio-2.jpg" alt="img01" class="img-responsive" />
-					<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
-					<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-				</div>
-			</div>
-		</div>
-	</div>
- -->
-	<!-- Modal for portfolio item 3 -->
-	<!-- 	<div class="modal fade" id="Modal-3" tabindex="-1" role="dialog" aria-labelledby="Modal-label-3">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-							aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="Modal-label-3">Lamp & Velvet</h4>
-				</div>
-				<div class="modal-body">
-					<img src="images/demo/portfolio-3.jpg" alt="img01" class="img-responsive" />
-					<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
-					<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-				</div>
-			</div>
-		</div>
-	</div> -->
-
-	<!-- Modal for portfolio item 4 -->
-	<!-- 	<div class="modal fade" id="Modal-4" tabindex="-1" role="dialog" aria-labelledby="Modal-label-4">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-							aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="Modal-label-4">Smart Name</h4>
-				</div>
-				<div class="modal-body">
-					<img src="images/demo/portfolio-4.jpg" alt="img01" class="img-responsive" />
-					<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
-					<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-				</div>
-			</div>
-		</div>
-	</div> -->
-
-	<!-- Modal for portfolio item 5 -->
-	<!-- 	<div class="modal fade" id="Modal-5" tabindex="-1" role="dialog" aria-labelledby="Modal-label-5">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-							aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="Modal-label-5">Fast People</h4>
-				</div>
-				<div class="modal-body">
-					<img src="images/demo/portfolio-5.jpg" alt="img01" class="img-responsive" />
-					<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
-					<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-				</div>
-			</div>
-		</div>
-	</div> -->
-
-	<!-- Bootstrap core JavaScript-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/SmoothScroll.js"></script>
-	<script src="js/theme-scripts.js"></script>
+  </label>
+  </nav>
+  <!-- fin de barra de navegacion -->
 </body>
 
 </html>
