cambio de color de logo

--- a/index.html
+++ b/index.html
@@ -16,15 +16,11 @@
 	<!-- Custom styles for this template -->
 	<link href="css/style.css" rel="stylesheet">
 </head>
-<<<<<<< Updated upstream
-
-=======
->>>>>>> Stashed changes
 <body>
   <!--barra de navegacion-->
   <nav>
     <label for="" class="logo">
-      <a href=""> <img src="./img/logoNegro.png" alt=""></a>
+      <a href=""> <img src="./img/aladdinBlanco.png" alt=""></a>
     <div class="barra">
       <ul>
         <li>Home</li>
