--- a/index.html
+++ b/index.html
@@ -62,10 +62,34 @@
 	</style>
 </head>
 
-<body style="background-color: #1e1e1e;">
+<body style="background-color: #c7beb2;">
+	<header>
+		<nav class="navbar navbar-expand-lg " aria-label="Twelfth navbar example"
+			style="background-color:#a59f94 ;">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#">TEXTO</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
 
-
-
+				<div class="collapse navbar-collapse justify-content-md-end mb-1 " id="navbarsExample10">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="#">texto</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link disabled">texto</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link disabled">texto</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
 	<main>
 		<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-indicators">
@@ -78,21 +102,31 @@
 			<div class="carousel-inner">
 				<!-- carr item 1 -->
 				<div class="carousel-item active">
-					<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-						aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-						<rect width="100%" height="100%" fill="#202126" />
+					<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="" aria-hidden="true"
+						preserveAspectRatio="xMidYMid slice" focusable="false">
+						<rect width="100%" height="100%" fill="#c7beb2" />
 					</svg>
 
 					<div class="container">
 						<div class="carousel-caption text-start">
 							<div class="parent">
 								<div class="par-1">
-									<img src="img/logoPresentacion.png" alt="">
+									<div class="col-md-5">
+										<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+											width="500" height="500" xmlns="" role="img"
+											aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
+											focusable="false">
+
+											<rect width="100%" height="100%" fill="#555" /><text x="50%" y="50%"
+												fill="#aaa" dy=".3em">500x500</text>
+										</svg>
+
+									</div>
 								</div>
 								<div class="par-2">
 									<h1>TEXTO</h1>
 									<p>Some representative placeholder content for the first slide of the carousel.</p>
-									<p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+									<p><a class="btn btn-lg btn-primary" href="#">Ver</a></p>
 								</div>
 
 							</div>
@@ -103,19 +137,29 @@
 				<div class="carousel-item">
 					<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
 						aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-						<rect width="100%" height="100%" fill="#202126" />
+						<rect width="100%" height="100%" fill="#c7beb2" />
 					</svg>
 
 					<div class="container">
 						<div class="carousel-caption">
 							<div class="parent">
 								<div class="par-1">
-									<img src="img/logoPresentacion.png" alt="">
+									<div class="col-md-5">
+										<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+											width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img"
+											aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
+											focusable="false">
+											<title>Placeholder</title>
+											<rect width="100%" height="100%" fill="#555" /><text x="50%" y="50%"
+												fill="#aaa" dy=".3em">500x500</text>
+										</svg>
+
+									</div>
 								</div>
 								<div class="par-2">
 									<h1>TEXTO</h1>
 									<p>Some representative placeholder content for the first slide of the carousel.</p>
-									<p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+									<p><a class="btn btn-lg btn-primary" href="#">Ver</a></p>
 								</div>
 
 							</div>
@@ -126,19 +170,29 @@
 				<div class="carousel-item">
 					<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
 						aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-						<rect width="100%" height="100%" fill="#202126" />
+						<rect width="100%" height="100%" fill="#c7beb2" />
 					</svg>
 
 					<div class="container">
 						<div class="carousel-caption text-end">
 							<div class="parent">
 								<div class="par-1">
-									<img src="img/logoPresentacion.png" alt="">
+									<div class="col-md-5">
+										<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+											width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img"
+											aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
+											focusable="false">
+											<title>Placeholder</title>
+											<rect width="100%" height="100%" fill="#555" /><text x="50%" y="50%"
+												fill="#aaa" dy=".3em">500x500</text>
+										</svg>
+
+									</div>
 								</div>
 								<div class="par-2">
 									<h1>TEXTO</h1>
 									<p>Some representative placeholder content for the first slide of the carousel.</p>
-									<p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+									<p><a class="btn btn-lg btn-primary" href="#">Ver</a></p>
 								</div>
 
 							</div>
@@ -177,7 +231,7 @@
 					<p style="color: #fff;">Some representative placeholder content for the three columns of text below
 						the carousel. This is
 						the first column.</p>
-					<p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+					<p><a class="btn btn-secondary" href="#">Detalles &raquo;</a></p>
 				</div><!-- -->
 				<!--  -->
 				<div class="col-lg-4">
@@ -193,7 +247,7 @@
 					<p style="color: #fff;">Another exciting bit of representative placeholder content. This time, we've
 						moved on to the
 						second column.</p>
-					<p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+					<p><a class="btn btn-secondary" href="#">Detalles &raquo;</a></p>
 				</div><!--  -->
 				<!--  -->
 				<div class="col-lg-4">
@@ -207,7 +261,7 @@
 
 					<h2 style="color: #fff;" class="fw-normal">Heading</h2>
 					<p style="color: #fff;">And lastly this, the third column of representative placeholder content.</p>
-					<p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+					<p><a class="btn btn-secondary" href="#">Detalles &raquo;</a></p>
 				</div><!-- -->
 			</div><!-- /.row -->
 
@@ -218,7 +272,7 @@
 			<!--  -->
 			<div class="row featurette">
 				<div class="col-md-7">
-					<div style="background-color: #fff; height: 300px; width: 650px;">
+					<div style="background-color: #fff; ">
 						<h2 class="featurette-heading fw-normal lh-1 text-center">DEPARTAMENTOS</h2>
 						<p class="lead">And yes, this is the last block of representative placeholder content. Again,
 							not
@@ -243,8 +297,8 @@
 			<hr class="featurette-divider">
 			<!--  -->
 			<div class="row featurette">
-				<div class="col-md-7 order-md-2">
-					<div style="background-color: #fff; height: 300px; width: 650px;">
+				<div class="col-md-7 order-md-3">
+					<div style="background-color: #fff;">
 						<h2 class="featurette-heading fw-normal lh-1 text-center">LOFT</h2>
 						<p class="lead">Another featurette? Of course. More placeholder content here to give you an idea
 							of
@@ -268,7 +322,7 @@
 			<div class="row featurette">
 				<div class="row featurette">
 					<div class="col-md-7">
-						<div style="background-color: #fff; height: 300px; width: 650px;">
+						<div style="background-color: #fff; ">
 							<h2 class="featurette-heading fw-normal lh-1 text-center">And lastly, this one.</h2>
 							<p class="lead">And yes, this is the last block of representative placeholder content.
 								Again, not
@@ -296,14 +350,15 @@
 			</div><!-- /.container -->
 
 
-    <!-- footer -->
-    <footer class="mt-auto  text-dark text-center" >
-        <p class="text-white">
-            Desarrollado por
-            <a href="https://www.codehuit.com/" class="verde  text-decoration-none" style="color: #b4ff00 ;">CODE</a>
-            <a href="https://www.codehuit.com/" class="text-white text-decoration-none">HUIT</a>
-        </p>
-    </footer>
+			<!-- footer -->
+			<footer class="mt-auto  text-dark text-center">
+				<p class="text-dark">
+					Desarrollado por
+					<a href="https://www.codehuit.com/" class="verde  text-decoration-none"
+						style="color: #b4ff00 ;">CODE</a>
+					<a href="https://www.codehuit.com/" class="text-dark text-decoration-none">HUIT</a>
+				</p>
+			</footer>
 	</main>
 
 
